@@ -1,3 +1,7 @@
+2007-05-28  George Giolfan  <georgegiolfan@yahoo.com>
+
+	* Canvas.cs: Added.
+
 2007-05-27  George Giolfan  <georgegiolfan@yahoo.com>
 
 	* ProgressBar.cs, Slider.cs: Switched to implemented RangeBase.
